--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- Title -->
     <title>Pokemon TCG</title>
 
+    <!--Website description -->
+    <meta name="description" content="Wondering what set your favorite card art is from? Missing a card to complete your Wartortle collection? Use this to find every card art made of every Pokemon and shop that card via eBay." />
+
     <!-- CSS -->
     <link href="main.css" type="text/css" rel="stylesheet">
 
